# csi3610-sudoku

./: Cargo.toml
benches/: benchmark.rs
docs/: ai-usage.md  assignment.md
resources/puzzles/: convert.py  source.md
src/: main.rs  solver.rs
src/board/: board.rs  digit.rs  digit_candidate_set.rs  mod.rs  position.rs
